--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,6 +36,22 @@
         <div class="particle"></div>
         <div class="particle"></div>
       </div>
+      <!-- Floating hashtags -->
+      <div class="floating-hashtags">
+        <span class="float-tag">#reels</span>
+        <span class="float-tag">#shorts</span>
+        <span class="float-tag">#content</span>
+        <span class="float-tag">#viral</span>
+        <span class="float-tag">#creator</span>
+        <span class="float-hash">#</span>
+        <span class="float-hash">#</span>
+        <span class="float-hash">#</span>
+        <span class="float-hash">#</span>
+        <span class="float-hash">#</span>
+        <span class="float-hash">#</span>
+        <span class="float-hash">#</span>
+        <span class="float-hash">#</span>
+      </div>
     </div>
 
     <!-- Top Bar -->
@@ -51,11 +67,6 @@
         <h1>// Reels From Video</h1>
         <p class="tagline">AI-powered clip extraction from video content</p>
         <p class="caption">Turn hours into highlights. Your next viral moment is a few clicks away.</p>
-        <p class="sub-caption">
-          <span>#reels</span>
-          <span>#shorts</span>
-          <span>#content</span>
-        </p>
         <div class="platform-icons">
           <!-- YouTube -->
           <svg class="platform-icon" viewBox="0 0 24 24" fill="currentColor">
